# tamagorust

./: .gitignore  Cargo.toml  README.md  build.rs  diagram.json  diagram_from_gpt.json  justfile  rust-toolchain.toml  rustfmt.toml  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
_old/.devcontainer/: Dockerfile
_old/docs/: README.md
scripts/: flash.sh
src/: main.rs
tama/: Cargo.toml
tama/src/: main.rs
