[package]
name = "tama"
version = "0.1.0"
authors = ["jrx <jerome@rouaix.eu>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = [
    "alloc",
    "embassy",
    "esp-idf-svc/native",
    "esp-idf-svc/panic_handler",
    "esp-idf-svc/alloc_handler",
    "esp-idf-svc/libstart",
]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
# nightly = ["esp-idf-svc/nightly"]
# experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
defmt = "0.3"
defmt-rtt = "0.4"

# ESP IDF
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = { version = "0.43", default-features = false }

# Embedded
embedded-hal = { version = "1", default-features = false }

# Embassy
embassy-executor = { version = "0.5", default-features = false }
embassy-time = { version = "0.3.0", default-features = false, features = [
    "defmt",
    "defmt-timestamp-uptime",
    # "tick-hz-8",              # Very low tick rate
] }


[build-dependencies]
embuild = "0.31.3"
